# ETE_MLOps_Credit_Card_Fraud_Prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.deploy.yml  docker-compose.yml  example.env  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
airflow/: Dockerfile  entry.sh  requirements.txt
airflow/dags/: ETL.py  TRAIN.py
airflow/dags/bash/: dvc_load_task.sh  dvc_track_raw_data.sh
airflow/scripts/: data_extract.py  data_transform.py  drift_detect.py  model_evalpush.py  model_trainer.py
config/: config.yml  dashboards.yml  prometheus.yml
dashboards/: grafana_dash.json
notebooks/notebook/: explore.ipynb  file.py
src/cloud_storage/: s3_storage.py
src/configuration/: config_manager.py
src/constants/: __init__.py
src/entity/: artifact_entity.py  config_entity.py  prediction_input.py
src/feature_transform/: date_age.py
src/logger/: __init__.py
src/utils/: artifact_serializer.py  common.py
template/: form.html
