[project]
name = "ete-mlops-credit-card-fraud-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.39.4",
    "botocore>=1.39.4",
    "dill>=0.4.0",
    "ensure==1.0.2",
    "fastapi>=0.116.1",
    "from-root>=1.3.0",
    "jinja2>=3.1.6",
    "joblib>=1.5.1",
    "mypy-boto3-s3>=1.39.2",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "python-box==6.0.2",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "tqdm>=4.67.1",
    "types-pyyaml>=6.0.12.20250516",
    "uvicorn>=0.35.0",
]
